--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <form>
         <h1>INFOS DE PROFIL:</h1>
+		<h1>test 1</h1>
+		
         <fieldset>
             <input type="radio" name="sexe" id="f" value="f">femme
             <input type="radio" name="sexe" id="h" value="h">homme<br>
