--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hamza RANIA Zakaria adnane</h1>
+    <h1>omar</h1>
+    <h6></h6>
     <form>
         <h1>INFOS DE PROFIL:</h1>
         <fieldset>
