--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form>
         <h1>INFOS DE PROFIL:</h1>
         <fieldset>
-            <input type="radio" name="sexe" id="f" value="f">femme
+            <input type="radio" name="sexe" id="f" value="f">anas
             <input type="radio" name="sexe" id="h" value="h">homme<br>
             <input type="checkbox" value="ste" id="ste">Oui, je suis une ste<br>
             <label>Nom ste</label>
